mac: Fix bug where opacity is applied twice on RenderPassDrawQuads.

When using the CoreAnimation compositor, RenderPassDrawQuads are copied to an
IOSurface. The opacity is already applied there, so there's no need for the
CoreAnimation Compositor to apply it again.

BUG=660600
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2467643002
Cr-Commit-Position: refs/heads/master@{#429060}

Former-commit-id: 4a9cceac5f1883f48b564ad277d3d39cdd9f8615